fixed main text content fonts and alignment

--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,23 @@ body {
   flex-direction: column;
   gap: 15vh;
 }
+
+.text-wrapper > h1 ~ p {
+  font-size: 1.5rem;
+  font-family: "crimsonpro";
+  line-height: 1.8rem;
+}
+
+h1 + p {
+  width: 45vw;
+}
+
+.text-wrapper p:last-child {
+  margin-top: 1.2vh;
+}
+
+h1 {
+  font-size: 3rem;
+  font-family: "redwing";
+  margin-bottom: 2vh;
+}
